--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -62,6 +62,7 @@ training:
   checkpoint_every: 5000
   eval_every: 1000
   log_every: 100
+  warn_after_step: 2000       # suppress collapse warnings before this step
   # Scheduled sampling (prevents exposure bias)
   scheduled_sampling: true
   teacher_forcing_schedule: "linear"  # linear, exponential, constant
