--- a/configs/experiment/vctk_colab.yaml
+++ b/configs/experiment/vctk_colab.yaml
@@ -30,8 +30,8 @@ training:
   batch_size: 1
   grad_accum_steps: 16
   max_steps: 100000
-  lr: 1.0e-4
-  warmup_steps: 1000
+  lr: 5.0e-5
+  warmup_steps: 2000
   weight_decay: 0.01
   max_grad_norm: 1.0
   mixed_precision: true
@@ -39,7 +39,10 @@ training:
   eval_every: 1000
   log_every: 100
   scheduled_sampling: false
-  label_smoothing: 0.1
+  label_smoothing: 0.05
+  # Encourage broader codebook usage early to prevent collapse.
+  codebook_entropy_weight: 0.02
+  codebook_entropy_warmup_steps: 10000
 
 codec:
   type: "encodec"
