--- a/configs/experiment/ljspeech_mps.yaml
+++ b/configs/experiment/ljspeech_mps.yaml
@@ -30,10 +30,10 @@ training:
   batch_size: 1
   grad_accum_steps: 32
   max_steps: 50000
-  lr: 1.0e-4
-  warmup_steps: 100
+  lr: 3.0e-5
+  warmup_steps: 500
   scheduler_type: "cosine_warmup"
-  min_lr_ratio: 0.1
+  min_lr_ratio: 0.2
   weight_decay: 0.01
   max_grad_norm: 1.0
   mixed_precision: true
@@ -41,7 +41,10 @@ training:
   eval_every: 1000
   log_every: 100
   scheduled_sampling: false
-  label_smoothing: 0.2
+  label_smoothing: 0.05
+  # Encourage broader codebook usage early to prevent collapse.
+  codebook_entropy_weight: 0.03
+  codebook_entropy_warmup_steps: 15000
 
 codec:
   type: "encodec"
