--- a/configs/experiment/vctk_colab.yaml
+++ b/configs/experiment/vctk_colab.yaml
@@ -30,8 +30,8 @@ training:
   batch_size: 1
   grad_accum_steps: 16
   max_steps: 100000
-  lr: 5.0e-5
-  warmup_steps: 2000
+  lr: 7.0e-5
+  warmup_steps: 500
   weight_decay: 0.01
   max_grad_norm: 1.0
   mixed_precision: true
@@ -41,8 +41,10 @@ training:
   scheduled_sampling: false
   label_smoothing: 0.05
   # Encourage broader codebook usage early to prevent collapse.
-  codebook_entropy_weight: 0.02
-  codebook_entropy_warmup_steps: 10000
+  codebook_entropy_weight: 0.06
+  codebook_entropy_warmup_steps: 20000
+  scheduler_type: "cosine_warmup"
+  min_lr_ratio: 0.2
 
 codec:
   type: "encodec"
