--- a/configs/experiment/ljspeech_mps.yaml
+++ b/configs/experiment/ljspeech_mps.yaml
@@ -17,6 +17,18 @@ model:
     dropout: 0.1
     max_seq_len: 1024
     max_text_len: 256
+  nar:
+    n_codebooks: 7
+    vocab_size: 1024
+    d_model: 192
+    n_heads: 4
+    n_layers: 6
+    d_ff: 768
+    dropout: 0.1
+    max_seq_len: 1024
+    text_vocab_size: 128
+    max_text_len: 256
+    n_text_layers: 2
 
 data:
   dataset: "ljspeech"
@@ -49,14 +61,25 @@ training:
   max_grad_norm: 1.0
   mixed_precision: true
   scheduled_sampling: false
+  nar_scheduled_sampling: true
+  nar_teacher_forcing_schedule: "linear"
+  nar_teacher_forcing_start: 1.0
+  nar_teacher_forcing_end: 0.5
+  nar_conditioning_noise_prob: 0.10
+  nar_conditioning_noise_warmup_updates: 4000
+  nar_conditioning_noise_warmup_steps: 20000
   label_smoothing: 0.05
   # Encourage broader codebook usage early to prevent collapse.
-  codebook_entropy_weight: 0.06
-  codebook_entropy_warmup_updates: 2500
+  codebook_entropy_weight: 0.12
+  codebook_entropy_warmup_updates: 4000
   codebook_entropy_warmup_steps: 20000
+  # Encourage broad marginal vocab usage over batch/time.
+  codebook_usage_entropy_weight: 0.08
+  codebook_usage_entropy_warmup_updates: 4000
+  codebook_usage_entropy_warmup_steps: 20000
   # Input token noise to avoid early mode collapse.
-  token_noise_prob: 0.10
-  token_noise_warmup_updates: 2500
+  token_noise_prob: 0.15
+  token_noise_warmup_updates: 4000
   token_noise_warmup_steps: 20000
 
 codec:
